Updated  Val_IfUnique_or_print_top_gropSizes()
Removed '-1' HERE:
        # Set the number of Top values:
        if (1 < len(df_by_sizes_of_groups) < num_of_top_size_groups): 
          num_of_top_size_groups = len(df_by_sizes_of_groups)   # -1

--- a/Advanced_EDA_ISK_Jup.ipynb
+++ b/Advanced_EDA_ISK_Jup.ipynb
@@ -231,7 +231,8 @@
     "        display(df_by_sizes_of_groups['group_size'].max())  # <=> self.df.groupby(col_name).size().max()\n",
     "\n",
     "        # Set the number of Top values:\n",
-    "        if (1 < len(df_by_sizes_of_groups) < num_of_top_size_groups): num_of_top_size_groups = len(df_by_sizes_of_groups) - 1\n",
+    "        if (1 < len(df_by_sizes_of_groups) < num_of_top_size_groups):\n",
+    "            num_of_top_size_groups = len(df_by_sizes_of_groups)  #- 1\n",
     "\n",
     "        # Display values for Top biggest groups (by \"group_size\") in top to down order\n",
     "        print(f'\\nTop {num_of_top_size_groups} Sizes of groups:')\n",
